--- a/kr/component/footer.html
+++ b/kr/component/footer.html
@@ -9,7 +9,7 @@
                         <img src="../../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
                         <div class="fl address">
                             <span class="title">Address</span>
-                            <span class="caption">AIA Central, 21st FL<br /><br /> Jl. Jenderal Sudirman No.Kav. 48A, Karet Semanggi,<br /> Kecamatan Setiabudi, South Jakarta<br /> Indonesia - 12930</span>
+                            <span class="caption">AIA Central 빌딩 21층<br /><br /> Jl. Jenderal Sudirman No.Kav. 48A, Karet Semanggi,<br /> Kecamatan Setiabudi, South Jakarta<br /> Indonesia - 12930</span>
                         </div>
                     </div>
                 </div>
