Update Korean Menu in Header

--- a/en/component/header_child.html
+++ b/en/component/header_child.html
@@ -85,44 +85,46 @@
                     <li>
                         <a class="first-menu">ABOUT</a>
                         <div class="second-menu">
-                            <a href="introduction.html">Introduction</a>
+                            <a href="../introduction.html">Introduction</a>
                             <span></span>
-                            <a href="ceo.html">CEO Message</a>
+                            <a href="../ceo.html">CEO Message</a>
                             <br />
-                            <a href="people.html">NIA People</a>
+                            <a href="../people.html">NIA People</a>
                             <span></span>
-                            <a href="office.html">Our Office</a>
+                            <a href="../office.html">Our Office</a>
                         </div>
                     </li>
     
                     <li>
                         <a class="first-menu">BUSINESS</a>
                         <div class="second-menu">
-                            <a href="business.html?1">Mobility Technology</a>
+                            <a href="../business.html?1">Mobility Technology</a>
                             <br />
-                            <a href="business.html?2">Ticketing System and Reservation</a>
+                            <a href="../business.html?2">Ticketing System and Reservation</a>
                             <br />
-                            <a href="business.html?3">Payment System</a>
+                            <a href="../business.html?3">Payment System</a>
                             <br />
-                            <a href="business.html?4">IT Service Management</a>
+                            <a href="../business.html?4">IT Service Management</a>
                             <br />
-                            <a href="business.html?5">Logistics and Delivery System</a>
+                            <a href="../business.html?5">Logistics and Delivery System</a>
                             <br />
-                            <a href="business.html?6">Live Streaming Platform</a>
+                            <a href="../business.html?6">Live Streaming Platform</a>
                         </div>
                     </li>
     
                     <li>
                         <a class="first-menu">COMMUNITY</a>
                         <div class="second-menu">
-                            <a href="notice.html">Notice</a>
+                            <a href="../notice.html">Notice</a>
                             <span></span>
-                            <a href="media.html">Media Report</a>
+                            <a href="../media.html">Media Report</a>
+                            <span></span>
+                            <a href="../video.html">Video Documentation</a>
                         </div>
                     </li>
     
                     <li>
-                        <a href="contact.html" class="first-menu">CONTACT</a>
+                        <a href="../contact.html" class="first-menu">CONTACT</a>
                     </li>
                 </ul>
             </div>
