--- a/kr/component/header_child.html
+++ b/kr/component/header_child.html
@@ -12,56 +12,52 @@
                     <li class="first-menu hidden-box">
                         <a>ABOUT NIA</a>
                         <div class="pc-hidden">
-                            <a href="../introduction.html" ><em>Introduction</em></a>
-                            <a href="../ceo.html"><em>CEO Message</em></a>
-                            <a href="../people.html"><em>NIA People</em></a>
-                            <a href="../office.html"><em>Our Office</em></a>
+                            <a href="../introduction.html" ><em>회사 소개</em></a>
+                            <a href="../ceo.html"><em>인사말</em></a>
+                            <a href="../people.html"><em>NIA 人</em></a>
+                            <a href="../office.html"><em>사무실</em></a>
                         </div>
                         <ul class="hidden-menu active">
-                            <li><a href="../introduction.html">Introduction</a></li>
-                            <li><a href="../ceo.html">CEO Message</a></li>
-                            <li><a href="../people.html">NIA People</a></li>
-                            <li><a href="../office.html">Our Office</a></li>
+                            <li><a href="../introduction.html">회사 소개</a></li>
+                            <li><a href="../ceo.html">인사말</a></li>
+                            <li><a href="../people.html">NIA 人</a></li>
+                            <li><a href="../office.html">사무실</a></li>
                         </ul>
                     </li>
 
                     <li class="first-menu hidden-box business">
                         <a>BUSINESS</a>
                         <div class="pc-hidden">
-                            <a href="../business.html?1"><em>Mobility Technology</em></a>
-                            <a href="../business.html?2"><em>Ticketing System and Reservation</em></a>
-                            <a href="../business.html?3"><em>Payment System</em></a>
-                            <a href="../business.html?4"><em>IT Service Management</em></a>
-                            <a href="../business.html?5"><em>Logistics and Delivery System</em></a>
-                            <a href="../business.html?6"><em>Live Streaming Platform</em></a>
+                            <a href="../business.html?1"><em>모빌리티 테크놀로지</em></a>
+                            <a href="../business.html?2"><em>예약 ·예매 시스템</em></a>
+                            <a href="../business.html?3"><em>결제 시스템</em></a>
+                            <a href="../business.html?4"><em>IT 서비스 운영 및 관리</em></a>
+                            <a href="../business.html?5"><em>물류 및 배송 시스템</em></a>
+                            <a href="../business.html?6"><em>라이브 스트리밍 플랫폼</em></a>
                         </div>
                         <ul class="hidden-menu active">
-                            <li><a href="../business.html?1">Mobility Technology</a></li>
-                            <li><a href="../business.html?2">Ticketing System and Reservation</a></li>
-                            <li><a href="../business.html?3">Payment System</a></li>
-                            <li><a href="../business.html?4">IT Service Management</a></li>
-                            <li><a href="../business.html?5">Logistics and Delivery System</a></li>
-                            <li><a href="../business.html?6">Live Streaming Platform</a></li>
+                            <li><a href="../business.html?1">모빌리티 테크놀로지</a></li>
+                            <li><a href="../business.html?2">예약 ·예매 시스템</a></li>
+                            <li><a href="../business.html?3">결제 시스템</a></li>
+                            <li><a href="../business.html?4">IT 서비스 운영 및 관리</a></li>
+                            <li><a href="../business.html?5">물류 및 배송 시스템</a></li>
+                            <li><a href="../business.html?6">라이브 스트리밍 플랫폼</a></li>
                         </ul>
                     </li>
 
                     <li class="first-menu hidden-box">
                         <a>COMMUNITY</a>
                         <div class="pc-hidden">
-                            <a href="../notice.html"><em>Notice</em></a>
-                            <a href="../media.html"><em>Media Report</em></a>
-                            <a href="../video.html"><em>Video Documentation</em></a>
+                            <a href="../notice.html"><em>공지사항</em></a>
+                            <a href="../media.html"><em>매체 보도</em></a>
+                            <a href="../video.html"><em>영상</em></a>
                         </div>
                         <ul class="hidden-menu active">
-                            <li><a href="../notice.html">Notice</a></li>
-                            <li><a href="../media.html">Media Report</a></li>
-                            <li><a href="../video.html">Video Documentation</a></li>
+                            <li><a href="../notice.html">공지사항</a></li>
+                            <li><a href="../media.html">매체 보도</a></li>
+                            <li><a href="../video.html">영상</a></li>
                         </ul>
                     </li>
-
-                    <!--<li class="first-menu">
-                        <a href="../contact.html">CONTACT</a>
-                    </li>-->
                 </ul>
 
                 <div class="content-right">
@@ -77,17 +73,6 @@
                                 <li><a href="../../en/index.html"><img src="../../assets/img/icon/header_flag_inggris.svg" class="language_flag"/>English</a></li>
                             </ul>
                         </div>
-                        <!--<a class="pc-ham hambuger-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </a>
-    
-                        <a class="mobile-ham hambuger-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </a>-->
                     </div>
                     <a href="../../kr/contact.html" class="btn_contact_us">Contact Us</a>
                 </div>
@@ -100,44 +85,46 @@
                     <li>
                         <a class="first-menu">ABOUT</a>
                         <div class="second-menu">
-                            <a href="introduction.html">Introduction</a>
+                            <a href="../introduction.html">회사 소개</a>
                             <span></span>
-                            <a href="ceo.html">CEO Message</a>
+                            <a href="../ceo.html">인사말</a>
                             <br />
-                            <a href="people.html">NIA People</a>
+                            <a href="../people.html">NIA 人</a>
                             <span></span>
-                            <a href="office.html">Our Office</a>
+                            <a href="../office.html">사무실</a>
                         </div>
                     </li>
     
                     <li>
                         <a class="first-menu">BUSINESS</a>
                         <div class="second-menu">
-                            <a href="business.html?1">Mobility Technology</a>
+                            <a href="../business.html?1">모빌리티 테크놀로지</a>
                             <br />
-                            <a href="business.html?2">Ticketing System and Reservation</a>
+                            <a href="../business.html?2">예약 ·예매 시스템</a>
                             <br />
-                            <a href="business.html?3">Payment System</a>
+                            <a href="../business.html?3">결제 시스템</a>
                             <br />
-                            <a href="business.html?4">IT Service Management</a>
+                            <a href="../business.html?4">IT 서비스 운영 및 관리</a>
                             <br />
-                            <a href="business.html?5">Logistics and Delivery System</a>
+                            <a href="../business.html?5">물류 및 배송 시스템</a>
                             <br />
-                            <a href="business.html?6">Live Streaming Platform</a>
+                            <a href="../business.html?6">라이브 스트리밍 플랫폼</a>
                         </div>
                     </li>
     
                     <li>
                         <a class="first-menu">COMMUNITY</a>
                         <div class="second-menu">
-                            <a href="notice.html">Notice</a>
+                            <a href="../notice.html">공지사항</a>
                             <span></span>
-                            <a href="media.html">Media Report</a>
+                            <a href="../media.html">매체 보도</a>
+                            <span></span>
+                            <a href="../video.html">영상</a>
                         </div>
                     </li>
     
                     <li>
-                        <a href="contact.html" class="first-menu">CONTACT</a>
+                        <a href="../contact.html" class="first-menu">CONTACT</a>
                     </li>
                 </ul>
             </div>
