Update language Korean in page

--- a/kr/component/header.html
+++ b/kr/component/header.html
@@ -65,7 +65,7 @@
                         <div class="lang-box hidden-box">
                             <a class="lang-btn">
                                 <img src="../../assets/img/icon/header_flag_korea.svg" class="language_flag"/>
-                                <span>IN</span>
+                                <span>KR</span>
                                 <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
                             </a>
                             <ul class="lang-menu hidden-menu">
