--- a/kr/component/header.html
+++ b/kr/component/header.html
@@ -2,7 +2,7 @@
     <div id="header-wrapper">
         <div class="pc-bg"></div>
         <div class="row">
-            <div class="menu-wrapper font-azo">
+            <div class="menu-wrapper">
                 <a class="logo" href="index.html">
                     <img class="effect-off" src="../../assets/img/icon/header_logo_color.svg" />
                     <img class="effect-on" src="../../assets/img/icon/header_logo_grey.svg" />
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="mobile-menu font-azo">
+        <div class="mobile-menu">
             <div class="inner">
                 <ul>
                     <li>
