--- a/kr/component/footer.html
+++ b/kr/component/footer.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="social-media">
-                            <h4 class="font-azo">Connect with us</h4>
+                            <h4>Connect with us</h4>
                             <a href="https://instagram.com/networksindonesiaaku?igshid=MTk0NTkyODZkYg==" target="_blank"><img src='../../assets/img/icon/social_instagram.svg' /></a>
                             <a href="https://www.tiktok.com/@networksindonesiaaku" target="_blank"><img src='../../assets/img/icon/social_tiktok.svg' /></a>
                             <a href="https://www.facebook.com/NetworksIndonesiaAKU" target="_blank"><img src='../../assets/img/icon/social_facebook.svg' /></a>
