--- a/kr/component/header_child.html
+++ b/kr/component/header_child.html
@@ -11,13 +11,13 @@
                 <ul class="menu-box">
                     <li class="first-menu hidden-box">
                         <a>ABOUT NIA</a>
-                        <div class="pc-hidden">
+                        <div class="pc-hidden korean-lang">
                             <a href="../introduction.html" ><em>회사 소개</em></a>
                             <a href="../ceo.html"><em>인사말</em></a>
                             <a href="../people.html"><em>NIA 人</em></a>
                             <a href="../office.html"><em>사무실</em></a>
                         </div>
-                        <ul class="hidden-menu active">
+                        <ul class="hidden-menu active korean-lang">
                             <li><a href="../introduction.html">회사 소개</a></li>
                             <li><a href="../ceo.html">인사말</a></li>
                             <li><a href="../people.html">NIA 人</a></li>
@@ -27,7 +27,7 @@
 
                     <li class="first-menu hidden-box business">
                         <a>BUSINESS</a>
-                        <div class="pc-hidden">
+                        <div class="pc-hidden korean-lang">
                             <a href="../business.html?1"><em>모빌리티 테크놀로지</em></a>
                             <a href="../business.html?2"><em>예약 ·예매 시스템</em></a>
                             <a href="../business.html?3"><em>결제 시스템</em></a>
@@ -35,7 +35,7 @@
                             <a href="../business.html?5"><em>물류 및 배송 시스템</em></a>
                             <a href="../business.html?6"><em>라이브 스트리밍 플랫폼</em></a>
                         </div>
-                        <ul class="hidden-menu active">
+                        <ul class="hidden-menu active korean-lang">
                             <li><a href="../business.html?1">모빌리티 테크놀로지</a></li>
                             <li><a href="../business.html?2">예약 ·예매 시스템</a></li>
                             <li><a href="../business.html?3">결제 시스템</a></li>
@@ -47,12 +47,12 @@
 
                     <li class="first-menu hidden-box">
                         <a>COMMUNITY</a>
-                        <div class="pc-hidden">
+                        <div class="pc-hidden korean-lang">
                             <a href="../notice.html"><em>공지사항</em></a>
                             <a href="../media.html"><em>매체 보도</em></a>
                             <a href="../video.html"><em>영상</em></a>
                         </div>
-                        <ul class="hidden-menu active">
+                        <ul class="hidden-menu active korean-lang">
                             <li><a href="../notice.html">공지사항</a></li>
                             <li><a href="../media.html">매체 보도</a></li>
                             <li><a href="../video.html">영상</a></li>
