--- a/en/component/header.html
+++ b/en/component/header.html
@@ -75,6 +75,11 @@
                         </div>
                     </div>
                     <a href="../../en/contact.html" class="btn_contact_us">Contact Us</a>
+                    <a class="mobile-ham hambuger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
                 </div>
             </div>
         </div>
