--- a/en/component/header_child.html
+++ b/en/component/header_child.html
@@ -35,7 +35,7 @@
                             <a href="../business.html?5"><em>Logistics and Delivery System</em></a>
                             <a href="../business.html?6"><em>Live Streaming Platform</em></a>
                         </div>
-                        <ul class="hidden-menu active">
+                        <ul class="hidden-menu active" style="width: 305px;">
                             <li><a href="../business.html?1">Mobility Technology</a></li>
                             <li><a href="../business.html?2">Ticketing System and Reservation</a></li>
                             <li><a href="../business.html?3">Payment System</a></li>
@@ -69,8 +69,8 @@
                                 <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
                             </a>
                             <ul class="lang-menu hidden-menu">
-                                <li><a href="../../kr/index.html"><img src="../../assets/img/icon/header_flag_korea.svg" class="language_flag"/>Korea</a></li>
-                                <li><a href="../../in/index.html"><img src="../../assets/img/icon/header_flag_indonesia.svg" class="language_flag"/>Indonesian</a></li>
+                                <li><a href="../../kr/index.html">Korea</a></li>
+                                <li><a href="../../in/index.html">Indonesia</a></li>
                             </ul>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                     </li>
     
                     <li>
-                        <a href="../contact.html" class="first-menu">CONTACT</a>
+                        <a href="../contact.html" class="first-menu">CONTACT US</a>
                     </li>
                 </ul>
             </div>
