--- a/kr/component/header_child.html
+++ b/kr/component/header_child.html
@@ -35,7 +35,7 @@
                             <a href="../business.html?5"><em>물류 및 배송 시스템</em></a>
                             <a href="../business.html?6"><em>라이브 스트리밍 플랫폼</em></a>
                         </div>
-                        <ul class="hidden-menu active korean-lang">
+                        <ul class="hidden-menu active korean-lang"  style="width: 226px;">
                             <li><a href="../business.html?1">모빌리티 테크놀로지</a></li>
                             <li><a href="../business.html?2">예약 ·예매 시스템</a></li>
                             <li><a href="../business.html?3">결제 시스템</a></li>
@@ -69,8 +69,8 @@
                                 <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
                             </a>
                             <ul class="lang-menu hidden-menu">
-                                <li><a href="../../in/index.html"><img src="../../assets/img/icon/header_flag_indonesia.svg" class="language_flag"/>Indonesian</a></li>
-                                <li><a href="../../en/index.html"><img src="../../assets/img/icon/header_flag_inggris.svg" class="language_flag"/>English</a></li>
+                                <li><a href="../../in/index.html">Indonesia</a></li>
+                                <li><a href="../../en/index.html">English</a></li>
                             </ul>
                         </div>
                     </div>
